# pipeline

./: .env.example  .flake8  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: prometheus.yml
data/: artists.csv  raw_plays.csv  raw_plays_enhanced.csv  stage.json
docs/: database_schema.md  development.md  plan.md  sqlalchemy_learning_guide.md  sqlalchemy_vs_doctrine.md  todo.md
scripts/: README.md  demo_session_patterns.py  init_db.sql  learn_pandas_transforms.py  learn_sqlalchemy.py  setup_db.py
src/: __init__.py
src/pipeline/: __init__.py  cli.py  config.py  database.py  drawer.py  enrichment.py  logger.py  main.py  persistence.py  storage.py  world.py
src/pipeline/clients/: __init__.py  listenbrainz.py  musicbrainz.py
src/pipeline/config/: settings.py
src/pipeline/core/: __init__.py  pipeline.py
src/pipeline/data/: processor.py
src/pipeline/services/: __init__.py  cursor.py  ingestion.py
src/pipeline/utils/: logging.py
tests/: __init__.py  conftest.py  test_api_client.py  test_ingestion_service.py  test_persistence_tracks.py  test_storage.py  test_world.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_data_processor.py  test_pipeline.py
